# experiments

./: .gitignore  README.md  pyproject.toml  test.txt
compressed_rag/: first.py
data/: get_city_data.py
dbt_rag/: dbt_agent_langgraph_simple_route.py  dbt_agent_langgraph_supervisor.py  dbt_code_compressed_output.json  dbt_code_output.json  dbt_code_test.json  dbt_columns_output.json  dbt_columns_output1.json  dbt_columns_test.json  dbt_descriptions_compressed_output.json  dbt_descriptions_output.json  dbt_descriptions_test.json  dbt_downstream_models_compressed_output.json  dbt_downstream_models_output.json  dbt_downstream_models_test.json  dbt_metadata_output.json  dbt_metadata_output1.json  dbt_metadata_test.json  dbt_rag.py  dbt_test_rag.py  dbt_test_valid_answer.py  dbt_unify_agent.py  dbt_unify_agent_local.py  dbt_upstream_models_compressed_output.json  dbt_upstream_models_output.json  dbt_upstream_models_test.json  demo_questions.txt  questions.txt  rag_test.json
embeddings.dbt_metadata/: chroma.sqlite3
evaluate_rag/: evaluate_rag.py  evaluation.json
evaluations/: evaluate.py
ingest/: ingest.py
llm_evals/: eval.py  eval_deepeval.py  existing.eval.py  gen_testset.py  ingest.py  rag_agent.py
llm_lingua/: example.py  llm_lingua.py  run.sh  server.py  use_server.py
models/: models.py
ollama_rag/: README.md  cities_agent.py  get_city_data.py  ingest.py  main.py
openai_rag/: README.md  dbt_agent.py  dbt_compression_agent.py  dbt_streamlit_agent.py  default_rag.py  ingest.py  main.py
prompts/: check_conditions.txt  completion.txt  delimiters.txt  few_shot.txt  output_format.txt  steps_complete_task.txt  structured_output.txt  work_own_solution.txt
(+24 files in other folders)
