[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Clay McCullough <cmckilla44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.8"
python-dotenv = "^1.0.1"
chromadb = "^0.4.22"
jq = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
