[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Clay McCullough <cmckilla44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.8"
python-dotenv = "^1.0.1"
jq = "^1.6.0"
langchain-mistralai = "^0.0.4"
pypdf = "^4.0.2"
#pysqlite3-binary = "^0.5.2.post3"
chromadb = "^0.4.22"
numexpr = "^2.9.0"
openai = "^1.12.0"
streamlit = "^1.31.1"
langchainhub = "^0.1.14"
llmlingua = "^0.1.6"
deepeval = "^0.20.78"
ragas = "^0.1.3"
langchain-community = "^0.0.25"
accelerate = "^0.27.2"
gradio = "^4.19.2"
fastapi = "^0.110.0"
huggingface-hub = "^0.21.3"
optimum = "^1.17.1"
auto-gptq = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
